# atrt

./: .gitignore  .pypirc.template  LICENSE  README.md  RELEASE_CHECKLIST.md  install.bat  publish_pypi.bat  pyproject.toml  requirements.txt  setup.py  setup_github.bat  update_version.bat
atrt/: DTPM_calcfunc.py  __init__.py  dts_dataprocessing.py  flowrate_function.py  thermal_conductivity_function.py
atrt_env/: pyvenv.cfg
atrt_env/Scripts/: activate  activate.bat
examples/: README.md  basic_usage.py
tests/: README.md  test_basic.py
