[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atrt"
version = "0.1.0"
description = "Active Temperature Sensing and Thermal Response Test Analysis Package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "王丰源", email = "wfy22500@smail.nju.edu.cn"},
]
maintainers = [
    {name = "王丰源", email = "wfy22500@smail.nju.edu.cn"},
]
keywords = ["thermal conductivity", "DTS", "temperature sensing", "groundwater flow", "heat transfer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0,<2.0.0",
    "pandas>=1.3.0,<2.1.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0,<3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/atrt"
"Bug Reports" = "https://github.com/yourusername/atrt/issues"
"Source" = "https://github.com/yourusername/atrt"

[tool.setuptools.packages.find]
where = ["."]
include = ["atrt*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
